--- a/project/templates/starter_app/home.html
+++ b/project/templates/starter_app/home.html
@@ -1,11 +1,27 @@
 {% extends 'base.html' %}
 
 {% block body_block %}
-
-    <h1>Hi Django!</h1>
+    <h1>My django blog</h1>
     <ul>
-        {% for message in messages %}
-            <li><a href='/{{ message }}'>{{ message }}</a></li>
+        {% for post_detail in message_details %}
+            <div class="panel panel-default">
+                  <div class="panel-heading">
+                  <h3 class="panel-title"> <a href='/{{ post_detail.slug }}'>{{ post_detail.title }}</a> </h3>
+                  </div>
+                  <div class="panel-body">
+                   {{ post_detail.date }} <br>
+                  {{post_detail.content}}
+                  </div>
+                  <div class="panel-footer"> <a href='/{{ post_detail.slug }}'>Read more...</a>
+                  </div>
+                </div>
+            <br>
+
+
         {% endfor %}
 
+{% endblock %}
+
+{% block side_block %}
+  {% include 'menu.html'%}
 {% endblock %}
